--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular-youtube-api-factory": "^0.6.2",
     "core-js": "^2.5.4",
     "firebase": "^7.5.0",
+    "ngx-youtube-player": "^7.1.1",
     "rxjs": "~6.3.3",
     "sweetalert": "^2.1.2",
     "tslib": "^1.9.0",
